--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     </div>
 
     <div>
-        <h2>This is another content of the page</h2>
+        <section>
+            <h2>this is the title of the section</h2>
+            <article>This is the text of the article</article>
+        </section>
     </div>
 </body>
 </html>
